--- a/Source/OCompiler/Directory.Build.props
+++ b/Source/OCompiler/Directory.Build.props
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project>
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
