--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -5,11 +5,11 @@
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/main.ol"
     },
-    "Withoud generics and inheritance": {
+    "Without generics and inheritance": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/simple.ol"
     },
-	"String and comments": {
+	  "String and comments": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/strings.ol"
     },
