Implement bool, int, and real

--- a/Source/OCompiler/OCompiler.csproj
+++ b/Source/OCompiler/OCompiler.csproj
@@ -15,5 +15,9 @@
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
         <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Folder Include="StandardLibrary\Type\Reference" />
+    </ItemGroup>
     
 </Project>
