--- a/Source/OCompiler/OCompiler.csproj
+++ b/Source/OCompiler/OCompiler.csproj
@@ -15,5 +15,11 @@
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
         <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.1.0" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" />
+      <PackageReference Include="System.CodeDom" Version="6.0.0" />
+    </ItemGroup>
     
 </Project>
