Rebase on latest changes

--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -3,23 +3,23 @@
   "profiles": {
     "Simple example": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)/Examples/main.ol"
+      "commandLineArgs": "$(SolutionDir)/Examples/main.ol Main"
     },
     "Without generics and inheritance": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)/Examples/simple.ol"
+      "commandLineArgs": "$(SolutionDir)/Examples/simple.ol Main"
     },
-	  "String and comments": {
+    "String and comments": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)/Examples/strings.ol"
+      "commandLineArgs": "$(SolutionDir)/Examples/strings.ol Main"
     },
     "Unterminated comment": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)/Examples/wrong_comment.ol"
+      "commandLineArgs": "$(SolutionDir)/Examples/wrong_comment.ol Main"
     },
     "Unterminated string": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)/Examples/wrong_string.ol"
+      "commandLineArgs": "$(SolutionDir)/Examples/wrong_string.ol Main"
     }
   }
 }
