--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -1,10 +1,6 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "Simple example": {
-      "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)/Examples/main.ol Main 69 666"
-    },
     "Without generics and inheritance": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/simple.ol Main"
@@ -20,6 +16,10 @@
     "Unterminated string": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/wrong_string.ol Main"
+    },
+    "Sum of two numbers": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)/Examples/sum-of-two.ol Main 42 90"
     }
   }
 }
