fixes, add Time to standart lib, add tictactoe exampple

--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -5,6 +5,10 @@
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/simple.ol Main"
     },
+    "TicTacToe": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)/Examples/tic-tac-toe.ol TicTacToe"
+    },
     "String and comments": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/strings.ol Main"
