--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -28,6 +28,10 @@
     "Compilation v2 Tic-tac-toe": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/tic-tac-toe.ol $(SolutionDir)/Build/mogus/mogus.exe TicTacToe"
+    },
+    "Compilation v2 Gregification": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)/Examples/inheritance.ol $(SolutionDir)/Build/mogus/gregification.exe Main"
     }
   }
 }
