Add a test for inheritance

--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -20,6 +20,10 @@
     "Chain calls": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/chain-calls.ol Main 7"
+    },
+    "Inheritance": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)/Examples/inheritance.ol Main"
     }
   }
 }
