Old inheritance example support

--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -23,6 +23,10 @@
     },
     "Inheritance": {
       "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)/Examples/inheritance-simple.ol Main"
+    },
+    "Inheritance with new fields": {
+      "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/inheritance.ol Main"
     }
   }
