Add funny generics to test generic generics (genetics)

--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -48,6 +48,10 @@
     "Generic generics": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/generics.ol Main"
+    },
+    "Simple generics": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)/Examples/simple-generics.ol Main"
     }
   }
 }
