Add a test to demonstrate type annotations and default values

--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -45,6 +45,10 @@
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/type_annotations.ol Main"
     },
+    "Simple type annotations": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)/Examples/simple-type-annotations.ol Main"
+    },
     "Generic generics": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/generics.ol Main"
