--- a/Source/OCompiler/Properties/launchSettings.json
+++ b/Source/OCompiler/Properties/launchSettings.json
@@ -56,6 +56,10 @@
     "Simple generics": {
       "commandName": "Project",
       "commandLineArgs": "$(SolutionDir)/Examples/simple-generics.ol Main"
+    },
+    "Non-void constructor return": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)/Examples/nonvoid-ctor-return.ol Main"
     }
   }
 }
